--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/common": "^10.4.4",
     "@nestjs/core": "^10.4.4",
     "@nestjs/event-emitter": "^3.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/platform-socket.io": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
@@ -45,7 +47,6 @@
     "builder-pattern": "^2.2.0",
     "bull": "^4.16.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.6.1",
@@ -55,6 +56,7 @@
     "nanoid": "^5.0.7",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "redis": "^4.7.0",
@@ -78,6 +80,7 @@
     "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "class-validator": "^0.14.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
