--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.16.11",
     "@types/node-telegram-bot-api": "^0.64.7",
     "@types/pg": "^8.11.10",
